<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="weather"
            type="com.example.weatherens.data.local.WeatherEntity" />
        <variable
            name="handler"
            type="com.example.weatherens.ui.weather.WeatherFragment.DeleteHandler" />
        <variable
            name="vm"
            type="com.example.weatherens.ui.pager.PagingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/falling_sky_semibold"
            android:text="@{weather.cityToShow}"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <ImageView
            android:id="@+id/remove_location"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="18dp"
            android:onClick="@{() -> handler.onWeatherDelete(vm, weather)}"
            android:src="@drawable/ic_remove_location"
            android:contentDescription="@string/ic_remove_cd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"></ImageView>

        <TextView
            android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/falling_sky_regular"
            android:text="@{weather.datetimeToShow}"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city">
        </TextView>

        <TextView
            android:id="@+id/wind_measurement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/falling_sky_regular"
            android:text="@string/wind_measurement"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/wind_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/wind_label">
        </TextView>

        <TextView
            android:id="@+id/clouds_measurement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/falling_sky_regular"
            android:text="@string/cloud_measurement"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/clouds_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/clouds_label">
        </TextView>

        <TextView
            android:id="@+id/humidity_measurement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/falling_sky_regular"
            android:text="@string/humidity_measurement"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/humidity_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/humidity_label">
        </TextView>

        <TextView
            android:id="@+id/wind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/falling_sky_semibold"
            android:text="@{Integer.toString(Math.round(weather.windSpeedKph))}"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/wind_measurement"
            app:layout_constraintEnd_toEndOf="@+id/wind_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/wind_label">
        </TextView>

        <TextView
            android:id="@+id/clouds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/falling_sky_semibold"
            android:text="@{Float.toString(weather.precipitationMm)}"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/clouds_measurement"
            app:layout_constraintEnd_toEndOf="@+id/clouds_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/clouds_label">
        </TextView>

        <TextView
            android:id="@+id/humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:fontFamily="@font/falling_sky_semibold"
            android:text="@{Integer.toString(weather.humidityPercentage)}"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/humidity_measurement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/humidity_label">
        </TextView>

        <TextView
            android:id="@+id/wind_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/falling_sky_semibold"
            android:text="@string/wind_label"
            android:textColor="#aaaaaa"
            android:textSize="14sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/wind"
            app:layout_constraintEnd_toStartOf="@+id/clouds_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>

        <TextView
            android:id="@+id/clouds_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/falling_sky_semibold"
            android:text="@string/clouds_label"
            android:textColor="#aaaaaa"
            android:textSize="14sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/clouds"
            app:layout_constraintEnd_toStartOf="@+id/humidity_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/wind_label">
        </TextView>

        <TextView
            android:id="@+id/humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:fontFamily="@font/falling_sky_semibold"
            android:text="@string/humidity_label"
            android:textColor="#aaaaaa"
            android:textSize="14sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/clouds_label">
        </TextView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#88efefef"
            app:layout_constraintBottom_toTopOf="@+id/clouds_label"
            app:layout_constraintWidth_percent="0.3"
            android:layout_marginBottom="42dp">
        </View>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            url="@{weather.icon}"
            android:contentDescription="@string/ic_state_cd"
            android:layout_marginBottom="32dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true">
        </ImageView>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.descriptionToShow}"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:layout_marginBottom="14dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/icon"
            app:layout_constraintStart_toEndOf="@+id/icon"
            android:fontFamily="@font/falling_sky_extended">
        </TextView>

        <TextView
            android:id="@+id/degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/temperature, weather.tempC)}"
            app:layout_constraintBottom_toTopOf="@+id/icon"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/white"
            android:textSize="120sp"
            android:layout_marginBottom="8dp">
        </TextView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            gone="@{!vm.loading}"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>